# quality-hub

./: .env.example  .gitignore  PROJECT_BOOTSTRAP.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: cases.py  dashboard.py  features.py  projects.py  reports.py  runs.py
backend/app/utils/: exceptions.py
design/: L1-TASK-001-整体架构.md  L2-TASK-017-执行引擎重构.md
design/ui/: L1-TASK-002-功能点管理.md  L1-TASK-002-执行管理.md  L1-TASK-002-报告看板.md  L1-TASK-002-测试用例管理.md  L1-TASK-002-项目管理.md  L2-TASK-016-UI体验优化设计规范.md
docs/bug/待修复/: BUG-029-级联删除500.md
docs/产品/: L1-TASK-001-quality-hub-PRD.md  L2-TASK-016-UI体验优化-PRD.md  体验优化-产品完整性.md  体验优化-新用户视角.md  体验优化-日常使用视角.md  执行引擎调整-PRD.md
docs/测试用例/: L3-TASK-003-014-测试结果.md  L3-TASK-003-014-测试规划.md  quality-hub-完整功能测试报告.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: project.ts
frontend/src/types/: index.ts
frontend/src/views/: ExecutionView.vue  FeatureView.vue  NotFoundView.vue  ProjectView.vue  ReportView.vue  RunDetailView.vue  TestCaseView.vue
nginx/: default.conf
