[project]
name = "quality-hub-backend"
version = "0.1.0"
description = "质量管理平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "aiosqlite==0.20.0",
    "pydantic==2.9.2",
    "loguru==0.7.2",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
